# ordinator

./: .cursorrules  .gitignore  COMMANDS.md  CONFIGURATION.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  EXAMPLES.md  LICENSE  PRD.md  README.md  TEST_PLAN.md  cobertura.xml
.github/workflows/: ci.yml  release.yml
examples/: ordinator.toml
scripts/: dev-setup.sh  install.sh  release.sh
src/: README.md  bootstrap.rs  brew.rs  cli.rs  config.rs  git.rs  main.rs  readme.rs  repo.rs  secrets.rs  utils.rs
tests/: README.md  add.rs  apply.rs  bootstrap.rs  brew.rs  cli.rs  commit.rs  common.rs  edge_cases.rs  init.rs  meta.rs  profiles.rs  pull.rs  push.rs  readme.rs  secrets.rs  status.rs  sync.rs  uninstall.rs
