[package]
name = "ordinator"
version = "0.4.9"
edition = "2021"
authors = ["Anthony Norfleet <anthony.norfleet@gmail.com>"]
description = "Dotfiles and Environment Manager for macOS"
license = "MIT"
repository = "https://github.com/ordinators/ordinator"
keywords = ["dotfiles", "macos", "environment", "cli", "sops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI parsing
clap = { version = "4.4", features = ["derive"] }

# Git integration
git2 = "0.20"

# TOML configuration
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system operations
walkdir = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for README state tracking
sha2 = "0.10"

# Path handling
globset = "0.4"
chrono = "0.4"

# Shell command execution
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# SOPS integration (we'll need to shell out to sops)
which = "6.0"

# Regex for secrets detection
regex = "1.0"

# Directory utilities
dirs = "5.0"
tempfile = "3.8"

# HTTP downloads for repository bootstrap
reqwest = { version = "0.11", features = ["json"] }

# Archive extraction for repository bootstrap
flate2 = "1.0"

# URL parsing for repository URLs
url = "2.5"

# Archive handling for repository downloads
tar = "0.4"

colored = "2.0"

# Terminal detection
is-terminal = "0.1"

# Shell expansion for tilde expansion
shellexpand = "3.1"
dialoguer = "0.11"

[dev-dependencies]
# Testing frameworks
tempfile = "3.8"
assert_fs = "1.1"
assert_cmd = "2.0"
predicates = "3.0"

# Property-based testing
proptest = "1.4"

# Note: cargo-tarpaulin removed due to git2 dependency conflicts
# Can be added back later when needed for code coverage
# Note: cargo-fuzz removed until fuzz testing is implemented

[lints.clippy]
uninlined-format-args = "deny"
